CSHRCP-1480 - Added department load capability.
